Update ContactService.java
Bit logic for identify API